--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
   version: '3.8'
   services:
     db:
-      image: postgres:latest
+      image: postgres:15
+      restart: always
       env_file:
         - .env
       ports:
-        - "5432:5432"
+        - 5432:5432
       volumes:
         - postgres_data:/var/lib/postgresql/data/
   volumes:
