--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-    "name": "referral-builder",
-    "private": "true",
-    "workspaces": [
-        "packages/*"
+  "name": "referral-builder",
+  "private": "true",
+  "workspaces": {
+    "packages": [
+      "packages/*"
     ],
-    "scripts": {
-        "prepare": "husky install"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "eslint": "^8.54.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.29.0",
-        "eslint-plugin-unused-imports": "^3.0.0",
-        "husky": ">=6",
-        "lint-staged": ">=10",
-        "prettier": "^3.1.0"
-    },
-    "lint-staged": {
-        "*.{js,ts,jsx,tsx}": "eslint --cache",
-        "*.{js,ts,css,md}": "prettier --write"
-    }
+    "nohoist": [
+      "**/prisma",
+      "**/@prisma/client"
+    ]
+  },
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.2"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": "eslint --cache",
+    "*.{js,ts,css,md}": "prettier --write"
+  }
 }
