--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "db-prisma": "link:../db-prisma",
     "zod": "^3.22.4"
   },
   "devDependencies": {
