Simplify lint-staged parameters

--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
       "eslint --cache",
       "prettier --write"
     ],
-    "*.{css,md}": "prettier --write",
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{css,md}": "prettier --write"
   }
 }
