Setup /referrals API endpoint

--- a/packages/db-prisma/package.json
+++ b/packages/db-prisma/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "db": "prisma db",
     "init": "prisma init",
     "format": "prisma format",
     "generate": "prisma generate",
@@ -13,6 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
-    "prisma": "^5.6.0"
+    "prisma": "^5.6.0",
+    "zod-prisma-types": "^3.1.6"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
   }
 }
