--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
-    "start": "npm run build && node dist/index.js"
+    "build": "tsc && tsc-alias",
+    "start": "yarn build && node -r tsconfig-paths/register dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +14,11 @@
     "@t3-oss/env-core": "^0.7.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "db-prisma": "link:../db-prisma",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "db-prisma": "link:../db-prisma",
+    "module-alias": "^2.2.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -26,6 +27,11 @@
     "@types/node": "^20.9.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
