--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
     "module-alias": "^2.2.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/http-status-codes": "^1.2.0",
     "@types/node": "^20.9.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
