--- a/packages/db-prisma/package.json
+++ b/packages/db-prisma/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "prisma": "^5.6.0",
+    "zod": "^3.22.4",
     "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
