--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
+    "react-use": "^17.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.7.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
