--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.3",
     "react-use": "^17.4.1",
     "tailwind-merge": "^2.0.0",
