--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "references": [
     {
-      "path": "./packages/api"
+      "path": "./packages/backend"
+    },
+    {
+      "path": "./packages/db-prisma"
     },
     {
       "path": "./packages/frontend"
